# ProjetMoteurDeJeu

./: .gitignore  CMakeLists.txt  Project
Demo/: ControllableCamera.cpp  ControllableCamera.hpp  myCharacterController.cpp  myCharacterController.hpp  testScene.cpp
common/: InputController.cpp  InputController.hpp
common/Components/: component.cpp  component.hpp  drawableComponent.cpp  drawableComponent.hpp  physicsComponent.cpp  physicsComponent.hpp
common/Components/Character controller/: characterController.cpp  characterController.hpp
common/Components/ColliderComponent/: Collider.cpp  Collider.hpp
common/Components/ColliderComponent/PlaneCollider/: PlaneCollider.cpp  PlaneCollider.hpp
common/Components/ColliderComponent/SphereCollider/: SphereCollider.cpp  SphereCollider.hpp
common/Components/Gravity/: Gravity.cpp  Gravity.hpp
common/Components/MeshRenderer/: meshRenderer.cpp  meshRenderer.hpp
common/DataLoaders/Image/: stb_image.h
common/DataLoaders/Mesh/: objloader.cpp
common/Game/: Game.cpp  Game.hpp
common/Material/: material.hpp
common/Material/Custom/: custom.cpp  custom.hpp
common/Material/Static/: static.cpp  static.hpp
common/Material/User_Materials/HeightMap/: heightmap.cpp  heightmap.hpp
common/Material/User_Materials/UNLIT/: Unlit.h
common/Mesh/: mesh.cpp  mesh.hpp
common/Object/: object.cpp  object.hpp
common/Object/Camera/: camera.cpp  camera.hpp
common/Object/MeshObject/: meshObject.cpp  meshObject.hpp
common/Scene/: Scene.cpp  Scene.hpp
common/Shaders/: shader.cpp
common/Texture/: texture.cpp  texture.hpp
common/Utilities/: stdUtilities.cpp  stdUtilities.hpp
common/Utilities/DistanceBetween/: DistanceBetween.cpp  DistanceBetween.hpp
common/Utilities/Transformation/: quaternion_utils.cpp  rotation_utils.cpp  rotation_utils.hpp
data/shaders/FragmentShaders/Debug/Normal/: fragment_shader.glsl
data/shaders/FragmentShaders/Debug/UV/: fragment_shader.glsl
data/shaders/FragmentShaders/HeightMap/: fragment_shader.glsl
data/shaders/FragmentShaders/Unlit/: fragment_shader.glsl
data/shaders/VertexShaders/: vertex_shader.glsl
